--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
 	"main": "./out/extension.js",
 	"scripts": {
 		"build": "tsc",
-		"watch": "tsc -w"
+		"watch": "tsc -w",
+		"compile": "tsc"
 	},
 	"publisher": "vscode",
 	"repository": {
@@ -34,8 +35,17 @@
 		}
 		]
 	},
+	"menus": {
+		"editor/context": [
+		{
+			"command": "meuLsp.enviarSelecao",
+			"when": "editorHasSelection",
+			"group": "navigation"
+		}
+		]
+	},
 	"activationEvents": [
-		"onCommand:"
+		"onCommand:meuLsp.enviarSelecao"
 	]
 
 }
