Ajustado para incluir realce de sintaxe

--- a/client/package.json
+++ b/client/package.json
@@ -1,51 +1,51 @@
 {
-	"name": "lsp-sample-client",
-	"description": "VSCode part of a language server",
-	"author": "Microsoft Corporation",
-	"license": "MIT",
-	"version": "0.0.1",
-	"main": "./out/extension.js",
-	"scripts": {
-		"build": "tsc",
-		"watch": "tsc -w",
-		"compile": "tsc"
-	},
-	"publisher": "vscode",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/Microsoft/vscode-extension-samples"
-	},
-	"engines": {
-		"vscode": "^1.75.0"
-	},
-	"dependencies": {
-		"glob": "^11.0.0",
-		"vscode-languageclient": "^9.0.1"
-	},
-	"devDependencies": {
-		"@types/vscode": "^1.75.1",
-		"@vscode/test-electron": "^2.3.9"
-	}
-	,
-	"contributes": {
-		"commands": [
-		{
-			"command": "meuLsp.enviarSelecao",
-			"title": "Enviar Seleção para o Servidor"
-		}
-		]
-	},
-	"menus": {
-		"editor/context": [
-		{
-			"command": "meuLsp.enviarSelecao",
-			"when": "editorHasSelection",
-			"group": "navigation"
-		}
-		]
-	},
-	"activationEvents": [
-		"onCommand:meuLsp.enviarSelecao"
-	]
-
+  "name": "lsp-sample-client",
+  "description": "Cliente do Servidor de Linguagem para a Linguagem de Programação Português Puro (PoP)",
+  "author": "Elender Góis Gallas",
+  "license": "MIT",
+  "version": "0.0.1",
+  "main": "./out/extension.js",
+  "scripts": {
+    "build": "tsc",
+    "watch": "tsc -w",
+    "compile": "tsc"
+  },
+  "publisher": "elender",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/elenderg/Extensao-Portugues-Puro-VS-Code"
+  },
+  "engines": {
+    "vscode": "^1.75.0"
+  },
+  "dependencies": {
+    "glob": "^11.0.0",
+    "vscode-languageclient": "^9.0.1"
+  },
+  "devDependencies": {
+		"@types/node": "^20",
+    "@types/vscode": "^1.75.1",
+    "@vscode/test-electron": "^2.3.9"
+  },
+  "contributes": {
+    "commands": [
+    {
+      "command": "meuLsp.enviarSelecao",
+      "title": "Enviar Seleção para o Servidor"
+    }
+    ]
+  },
+  "menus": {
+    "editor/context": [
+    {
+      "command": "meuLsp.enviarSelecao",
+      "when": "editorHasSelection",
+      "group": "navigation"
+    }
+    ]
+  },
+  "activationEvents": [
+		"onLanguage:PoP",
+  	"workspaceContains:**/*.pop"    
+  ]
 }
