--- a/server/package.json
+++ b/server/package.json
@@ -1,16 +1,16 @@
 {
 	"name": "lsp-sample-server",
 	
-	"description": "Example implementation of a language server in node.",
+	"description": "Exemplo de implementação de um Servidor de Linguagem em Node.",
 	"version": "1.0.0",
-	"author": "Microsoft Corporation",
+	"author": "Elender Góis Gallas",
 	"license": "MIT",
 	"engines": {
 		"node": "*"
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/Microsoft/vscode-extension-samples"
+		"url": "https://github.com/elenderg/Extensao-Portugues-Puro-VS-Code"
 	},
 	"dependencies": {
 		"vscode-languageserver": "^9.0.1",
@@ -19,7 +19,7 @@
 	"scripts": {
 		"compile": "tsc -b",
     	"watch": "tsc -b -w",
-    	"start": "node ./client/out/extension.js"
+    	"start": "node ./out/server.js"
 	},
   "workspaces": ["client", "server"]
 }
