--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
 	"engines": {
 		"vscode": "^1.75.0"
 	},
-	"activationEvents": [
-		"onLanguage:pop"
-	],
+	
 	"main": "./client/out/extension",
 	"contributes": {
 		"configuration": {
@@ -57,9 +55,9 @@
     "languages": [
       {
         "id": "pop",
-        "aliases": [
-          "PoP",
-          "Português Puro"
+        "aliases": [          
+          "Português Puro",
+					"PoP"
         ],
         "extensions": [
           ".pop"
@@ -81,7 +79,7 @@
 		"watch": "tsc -b -w",
 		"lint": "eslint",
 		"postinstall": "cd client && npm install && cd ../server && npm install && cd ..",
-		"test": "sh ./scripts/e2e.sh"
+		"test": "node ./runTests.js"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.13.0",
