--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "version": "1.0.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/elenderg/Portugues-Puro"
+    "url": "https://github.com/elenderg/POP-LSP"
   },
 	"publisher": "elender",
   "categories": [
