--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/elenderg/Extensao-Portugues-Puro-VS-Code"
+		"url": "https://github.com/elenderg/POP-LSP"
 	},
 	"dependencies": {
 		"vscode-languageserver": "^9.0.1",
