--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
 	"editor.tabSize": 2,
 	"editor.detectIndentation": false
 	"typescript.tsc.autoDetect": "off",
-	"typescript.preferences.quoteStyle": "single",
+	"typescript.preferences.quoteStyle": "double",
 	"editor.codeActionsOnSave": {
 		"source.fixAll.eslint": "explicit"
 	}
