--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,7 @@
 {
-	"editor.insertSpaces": true,
-	"editor.tabSize": 2,
-	"editor.detectIndentation": false
+	"editor.insertSpaces": false,
 	"typescript.tsc.autoDetect": "off",
-	"typescript.preferences.quoteStyle": "double",
+	"typescript.preferences.quoteStyle": "single",
 	"editor.codeActionsOnSave": {
 		"source.fixAll.eslint": "explicit"
 	}
