--- a/server/package.json
+++ b/server/package.json
@@ -1,25 +1,24 @@
 {
-	"name": "lsp-sample-server",
-	
-	"description": "Exemplo de implementação de um Servidor de Linguagem em Node.",
-	"version": "1.0.0",
-	"author": "Elender Góis Gallas",
-	"license": "MIT",
-	"engines": {
-		"node": "*"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/elenderg/POP-LSP"
-	},
-	"dependencies": {
-		"vscode-languageserver": "^9.0.1",
-		"vscode-languageserver-textdocument": "^1.0.11"
-	},
-	"scripts": {
-		"compile": "tsc -b",
-    	"watch": "tsc -b -w",
-    	"start": "node ./out/server.js"
-	},
+  "name": "lsp-sample-server",
+  "description": "Exemplo de implementação de um Servidor de Linguagem em Node.",
+  "version": "1.0.0",
+  "author": "Elender Góis Gallas",
+  "license": "MIT",
+  "engines": {
+    "node": "*"
+  },
+  "repository": {
+    "type": "git",
+    "url": "Elender Góis Gallas"
+  },
+  "dependencies": {
+    "vscode-languageserver": "^9.0.1",
+    "vscode-languageserver-textdocument": "^1.0.11"
+  },
+  "scripts": {
+    "compile": "tsc -b",
+      "watch": "tsc -b -w",
+      "start": "node ./out/server.js"
+  },
   "workspaces": ["client", "server"]
 }
